# tmux-start

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: tmux-start.c  tmux-start.h
